iptables/backup_iptables.txt
# Generated by iptables-save v1.6.1 on Tue Jul 17 23:24:37 2018
*nat
:PREROUTING ACCEPT [10754:2003573]
:INPUT ACCEPT [8:504]
:OUTPUT ACCEPT [407564:33945109]
:POSTROUTING ACCEPT [407564:33945109]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Tue Jul 17 23:24:37 2018
# Generated by iptables-save v1.6.1 on Tue Jul 17 23:24:37 2018
*mangle
:PREROUTING ACCEPT [188057198:345999317197]
:INPUT ACCEPT [187898333:345960963111]
:FORWARD ACCEPT [7531:3584551]
:OUTPUT ACCEPT [130768439:175408957906]
:POSTROUTING ACCEPT [130776144:175412559429]
COMMIT
# Completed on Tue Jul 17 23:24:37 2018
# Generated by iptables-save v1.6.1 on Tue Jul 17 23:24:37 2018
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 113 --tcp-flags FIN,SYN,RST,ACK SYN -j REJECT --reject-with tcp-reset
-A INPUT -i wlp2s0 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -i wlp2s0 -p tcp -m tcp --dport 23147 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 23147 -j ACCEPT
COMMIT
# Completed on Tue Jul 17 23:24:37 2018
